# ai-tg-redmine-bot

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
redmine_bot/: bot.py  env.py  main.py  middleware.py  utils.py
